fixed spacing problem

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,6 @@
     letter-spacing: 0.1em;
     padding-left: 30px;
 }
-
 .navbar {
     background-color: #F3F2F2;
     position: -webkit-sticky;
@@ -22,19 +21,16 @@
     top: 0;
     border-bottom: 1px solid #D7D0D0;
 }
-
 .navbar a {
     color: #515C6F;
     font-size: 20px;
     margin-right: 50px;
 }
-
 .sub-navbar {
     background-color: #F6F6F6 !important;
     font-size: 10px !important;
     width: 170px;
 }
-
 .sub-navbar a {
     font-size: 18px !important;
 }
@@ -44,7 +40,6 @@
     font-size: calc(16px + 1vw);
     width: inherit;
 }
-
 .frontpage-button-display {
     width: 200px;
     box-shadow: 2px 2px 8px #515c6f;
@@ -52,7 +47,6 @@
     background-color: #FF6969 !important;
     border-color: #FF6969 !important;
 }
-
 .background-with-aga {
     width: 100%;
     height: 100vh;
@@ -66,39 +60,33 @@
     position: relative;
     color: white;
 }
-
 .picture-title {
     position: absolute;
     padding-top: 40vh;
     padding-left: 5vw;
     font-size: calc(18px + 3vw);
 }
-
 .picture-extra-information {
     position: absolute;
     padding-top: 80vh;
     padding-left: 5vw;
     font-size: calc(16px + 1vw);
 }
-
 .portfolio-title {
     text-align: center;
     padding-top: 5%;
 }
-
 .portfolio-item {
     margin-left: 10%;
     width: 80%;
     height: 80%;
     box-shadow: 1px 1px 3px #c2c1c1;
 }
-
 .portfolio-cover {
     margin: 2.5% 10% 10%;
     width: inherit;
     position: relative;
 }
-
 .portfolio-image {
     opacity: 1;
     display: block;
@@ -106,7 +94,6 @@
     height: auto;
     transition: .5s ease;
 }
-
 .hovered-filter {
     margin-left: 10%;
     width: 80%;
@@ -117,15 +104,12 @@
     position: absolute;
     background-color: #FF6969;
 }
-
 .portfolio-cover:hover .portfolio-image {
     opacity: 0.7;
 }
-
 .portfolio-cover:hover .hovered-filter {
     opacity: 0.7;
 }
-
 .portfolio-text {
     position: absolute;
     padding-top: 10%;
@@ -135,7 +119,6 @@
     text-align: right;
     width: 90%;
 }
-
 .portfolio-details {
     font-size: 2.4vw;
 }
@@ -147,21 +130,17 @@
     width: 100%;
     height: 100%;
 }
-
 .resume-title {
     padding-top: 5%;
     padding-bottom: 2.3%;
     font-size: calc(18px + 1vw);
 }
-
 .resume-text {
     padding-bottom: 100px
 }
-
 .resume-footer {
     margin-left: 0 !important;
 }
-
 .resume-footer a {
     color: #515C6F;
     padding-right: 100px;
@@ -176,16 +155,13 @@
     background-size: cover;
     background-position: inherit;
 }
-
 .about-picture {
     width: 60%;
 }
-
 .about-title {
     font-size: calc(18px + 3vw);
     text-align: center;
 }
-
 .about-text {
     margin-top: 40px;
     font-size: calc(12px + 0.6vw);
@@ -193,13 +169,11 @@
     padding-right: 25vw;
     text-align: left;
 }
-
 .about-text p {
     margin-bottom: 30px;
 }
 
 /**********CONTACT PAGE************/
-
 .contact-page {
     width: 100%;
     padding: 100px 15% 60px;
@@ -207,44 +181,35 @@
 .contact-page h2 {
     padding-bottom: 30px;
 }
-
 .contact-page-container {
     margin: 0 !important;
 }
-
 .contact-form {
     max-width: 500px !important;
     min-width: 500px !important;
 }
-
 .details-contact-form {
     max-width: 500px !important;
     min-width: 240px !important;
 }
-
 .form-group-display {
     background-color: white;
     box-shadow: 1px 1px 3px #c2c1c1;
     border-radius: 10px;
 }
-
 .icon-display {
     padding: 25px !important;
 }
-
 .no-icon-display {
     padding: 39px !important;
 }
-
 .form-display {
     padding-left: 0 !important;
 }
-
 .label-display {
     margin-top: 8px !important;
     margin-bottom: 0 !important;
 }
-
 .input-display {
     border-color: white !important;
     padding: 0 !important;
@@ -253,7 +218,6 @@
     font-size: calc(12px + 0.2vw) !important;
     min-height: 40px;
 }
-
 .contact-me-button {
     box-shadow: 2px 2px 8px #FF6969;
     border-radius: 19px !important;
@@ -262,20 +226,16 @@
     min-width: 110px;
     width: 12vw;
 }
-
 .details-title h3 {
     padding-bottom: 5px;
 }
-
 .details-content {
     padding-bottom: 30px;
     text-align: right;
 }
-
 .toast-display {
     width: 30vw;
 }
-
 .alert-fixed {
     position:fixed;
     top: 65px;
@@ -290,7 +250,6 @@
     width: 100%;
     padding: 100px 10% 0;
 }
-
 .project-title {
     text-align: center;
     padding: 0 10%;
@@ -305,48 +264,39 @@
     margin-right: auto;
     box-shadow: 1px 1px 3px #c2c1c1;
 }
-
 .project-section {
     margin: 60px 0;
 }
 .project-subsection {
     margin: 20px 0;
 }
-.project-multiple-pictures {
-
-}
 .project-single-picture {
     display: table-caption;
     width: 80vw;
     margin-bottom: 10px;
 }
-
 .section-title h1 {
     padding-left: 50px;
     padding-top: 70px;
     padding-right: 50px;
 }
-
 .description-with-title {
     text-align: left;
     padding-left: 50px;
     padding-top: 40px;
     padding-right: 50px;
 }
-
 .description-without-title {
     text-align: left;
     padding: 50px 50px 0;
 }
-
 .description-with-title h3 {
     padding-bottom: 20px;
 }
-
 .picture-with-description {
     display: table-caption;
+    margin-bottom: 10px;
 }
-
 .image-shading {
     display: block;
     box-shadow: 1px 1px 3px #c2c1c1;
